Redux - Add, edit, save note done

--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "moment": "^2.27.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
