--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.css",
-              "src/styles.less"
+              "src/styles/styles.less"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
