--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "^10.0.0",
+    "@angular-redux/store": "5.1.0",
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -25,9 +26,10 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
-    "redux": "^4.0.5",
+    "redux": "3.6.0",
     "redux-logger": "^3.0.6",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.6.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -36,9 +38,9 @@
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,6 +50,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "redux-devtools-extension": "^2.13.8",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
