ngrx intergation finished

--- a/angular.json
+++ b/angular.json
@@ -142,5 +142,8 @@
       }
     }
   },
-  "defaultProject": "notes-app"
+  "defaultProject": "notes-app",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
