--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "5.1.0",
     "@angular/animations": "~7.2.0",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
@@ -23,19 +22,21 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/store": "^9.2.0",
+    "@ngrx/store-devtools": "^9.2.0",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.19",
     "moment": "^2.27.0",
-    "redux": "3.6.0",
     "redux-logger": "^3.0.6",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.6.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
